@@ -8,6 +8,6 @@
     - Summon the Eater Of Worlds!
 	- Cthulu Played once!
 	- Get a glass its running away!
-	- I stole this from Terraria!
+	- One Million dollars!
 	- Dirty filthy traitors!
 	- 
